# github-webhooks

./: .pylintrc  README.md  mypy.ini  pyproject.toml  requirements-prod.txt  requirements-test-prod.txt  requirements-test.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml
example/: server.py
github_webhooks/: __init__.py  app.py  web.py
github_webhooks/handlers/: __init__.py  default.py  ping.py  registry.py  types.py
github_webhooks/schemas/: __init__.py  objects.py  request.py
