[tool.poetry]
name = "github-webhooks-framework"
version = "0.1.11"
license = "GPL-3.0-only"
authors = ["karech"]

description = "GitHub Webhooks Framework"
readme = "README.md"
homepage = "https://github.com/karech/github-webhooks"
repository = "https://github.com/karech/github-webhooks"

classifiers = [
    "Framework :: FastAPI",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "github_webhooks"}
]

keywords = [
    'github', 'webhooks', 'fastapi'
]

include = [
    "LICENSE",
    "README.md",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/karech/github-webhooks/issues"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
isort = "^5.10.1"
black = "^22.1.0"
tox = "^3.24.5"
flake8 = "^4.0.1"
flake8-blind-except = "^0.2.0"
flake8-bugbear = "^22.1.11"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.8.0"
flake8-debugger = "^4.0.0"
flake8-formatter-abspath = "^1.0.1"
flake8-isort = "^4.1.1"
flake8-logging-format = "^0.6.0"
flake8-mutable = "^1.2.0"
flake8-print = "^4.0.0"
flake8-quotes = "^3.3.1"
flake8-string-format = "^0.3.0"
flake8-broken-line = "^0.4.0"
flake8-eradicate = "^1.2.0"
flake8-multiline-containers = "^0.0.18"
flake8-use-fstring = "^1.3"
flake8-assertive = "^2.0.0"
flake8-tidy-imports = "^4.6.0"
uvicorn = "^0.17.4"

[tool.isort]
profile = "hug"
src_paths = ["github_webhooks"]
line_length = 120

[tool.black]
skip-string-normalization = true
line-length = 120
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
